<resources>
    <string name="app_name">RefillmyBottle</string>
    <string name="uela">By creating an account you agree to our \n Terms of Services and Privacy Policy</string>
    <string name="title_activity_refill_station">RefillStation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_new">New</string>
    <string name="title_shop">Shop</string>
    <string name="title_event">Event</string>
    <string name="title_Profile">Profile</string>
    <string name="title_maps">Maps</string>
    <string name="thanks_dialog">Thank You for Join Us!</string>
    <string name="lipsum_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="expanding_text">Expanding Every day</string>
    <string name="sorry_no_fill">Sorry there are no refill stations nearby. \n But you can help us get there faster.</string>
    <string name="suggest_title">Suggest a new Refill Station</string>
    <string name="lipsum_suggest">Tell us where you think new water fouontain should be added. We can work tohether to ask for more water fountains and me it easier to refill our bottle. \nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="slide_1_desc">Find refill stations near you</string>
    <string name="slide_2_desc">Check-in every time you refill at our stations to measure your impact and collect point, give ratings and reviews to collect more points</string>
    <string name="slide_3_desc">Suggest a refill stations and help us expand the refill network while you get more refill points </string>
    <string name="slide_4_desc">Reedem your points in our shop</string>
    <string name="slide_5_desc">Stay hydrated and check your daily water intake on your profile</string>
    <string name="title_recycle">Suggest a new Refill Station</string>
    <string name="content_text_recycle">Tell us where you think new water fountain should be added. We can work to ask for more water fountains and me t easier to refill our bottle</string>
    <string name="image_modify_label">Can you please use a different image or modify the design?</string>
    <string name="relation_suggest_station">What is your relation to the suggested station?</string>
    <string name="type_refill">What type of refill station is it?</string>
    <string name="account_setting">Account Settings</string>
    <string name="statistic_profile">Statistic</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="about_us">About us</string>
    <string name="terms_of_service">Terms of Service and Privacy Policy</string>
    <string name="points">1.200 pts</string>
    <string name="name_profile">Bahrainsyah OKsareinaldi</string>
    <string name="city_profile">Plered, Cirebon</string>
    <string name="description_person">Hy! My name is Bahrainsyah Oksareinaldi \nIam very interested in Android Programming \nI am now work at Codelabs Indonesia.</string>
    <string name="title_detail_maps">Starbucks Bintaro Jaya Plaza</string>
    <string name="street_detail_maps">Jalan Bintaro Utama III, Tanggerang Selatan</string>
    <string name="overview_button">Overview</string>
    <string name="review_button">Review</string>
    <string name="count_review">(10)</string>
    <string name="description_detail">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="got_point">You have got Free Credits!</string>
    <string name="title_rating_place">Please rating this place</string>
    <string name="skip">Skip</string>
    <string name="desc_intro_1">Find refill station near you</string>
    <string name="desc_intro_2">Check-in every time you refill at our station to measure your impact and collect points, give ratings and review to collect more points.</string>
    <string name="desc_intro_3">Suggest a refill station and help us expand the refill network while you get more refill points</string>
    <string name="redeem_point">Redeem your point in our shop</string>
    <string name="hidrate">Stay hidrate and check your daily water intake on your profile</string>
    <string name="continue_intro">Continue</string>
    <string name="title_activity_maps_serch">Map</string>
    <string name="title_allow">Allow "Refill My Water" \n to access your location?</string>
    <string name="description_allow">We need access to your location to show you releveant search result. With "Always" access we'll also send you some nice notifications.</string>
</resources>