<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/Maps"
        android:title="@string/title_maps"
        android:icon="@drawable/placeholder"
        android:enabled="true"
        app:showAsAction="always|withText"
        />
    <item
        android:id="@+id/New"
        android:title="@string/title_new"
        android:icon="@drawable/ideablue"
        android:enabled="true"
        app:showAsAction="always|withText"
        >
    </item>
    <item
        android:id="@+id/Event"
        android:enabled="true"
        android:title="@string/title_event"
        android:icon="@drawable/calendarblue"
        app:showAsAction="always|withText">
    </item>
    <item
        android:id="@+id/Shop"
        android:enabled="true"
        android:title="@string/title_shop"
        android:icon="@drawable/shoppingcartblue"
        app:showAsAction="always|withText"></item>
    <item
        android:id="@+id/Profile"
        android:enabled="true"
        android:title="@string/title_Profile"
        android:icon="@drawable/userblue"
        app:showAsAction="always|withText">
    </item>
</menu>