<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.refillmybottle.refilmybottle.newrefill.FormRefill">
        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/backwhite"
            android:tint="@color/button_grey"
            android:layout_margin="5dp" />
    <ImageView
        android:id="@+id/bottle_recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back_arrow"
        android:src="@drawable/bottlerecycle"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/title_recycle"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/suggest_title"
        android:layout_alignParentStart="true"
        android:layout_below="@id/bottle_recycle"
        android:textStyle="bold"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/content_suggest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_text_recycle"
        android:layout_below="@+id/title_recycle" />
    <TextView
        android:id="@+id/label_image_recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_modify_label"
        android:layout_below="@+id/content_suggest"
        android:layout_marginTop="30dp"
        android:textSize="12sp"
        android:layout_marginBottom="5dp" />
    <EditText
        android:id="@+id/input_Image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/edit_text_corner"
        android:layout_below="@id/label_image_recycle"
        android:drawableEnd="@drawable/camera"
        android:layout_marginBottom="15dp" />
    <TextView
        android:id="@+id/label_sugested_station"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relation_suggest_station"
        android:layout_below="@id/input_Image"
        android:layout_marginBottom="5dp" />
    <Spinner
        android:id="@+id/suggested_station"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/edit_text_corner"
        android:layout_below="@+id/label_sugested_station" />
    <TextView
        android:id="@+id/label_type_refill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_refill"
        android:textSize="12sp"
        android:textStyle="normal"
        android:layout_below="@+id/suggested_station" />
    <Spinner
        android:id="@+id/type_refill_station"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/edit_text_corner"
        android:layout_below="@id/label_type_refill"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/submit_type"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_height="56dp"
        android:layout_below="@id/type_refill_station"
        android:elevation="8dp"
        android:text="SUBMIT"
        android:background="@drawable/gray_button"
        android:textColor="@color/white"
        android:textStyle="bold" />
</RelativeLayout>
</ScrollView>